comment font face

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@font-face {
+/* @font-face {
   font-family: "NTR";
   font-weight: 200;
   font-display: fallback;
   src: url("/fonts/NTR-Regular.ttf") format("truetype");
-}
+} */
 
 html {
   scroll-behavior: smooth;
