--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,9 +1,9 @@
-/* @font-face {
+@font-face {
   font-family: "NTR";
   font-weight: 200;
   font-display: fallback;
-  src: url("/fonts/NTR-Regular.ttf") format("truetype");
-} */
+  src: url("/public/fonts/NTR-Regular.ttf") format("truetype");
+}
 
 #about {
   padding-left: 15%;
